--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <link rel="stylesheet" href="static/css/index.css">
-    <script src="build/src/index.js"></script>
 </head>
 <body>
-<div>AAAAAAAA</div>
+    <div id="board" class="board">
+    </div>
+    <script src="build/src/index.js"></script>
 </body>
 </html>
