--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
     <div id="board" class="board">
     </div>
-    <script src="build/src/index.js"></script>
+    <script>
+        require('./build/src/index.js')
+    </script>
 </body>
 </html>
