--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
 </head>
 <body>
     <div>
-        <div id="board" class="board"></div>
+        <div style="display: flex; flex-direction: row;">
+            <div id="board" class="board"></div>
+            <div id="engineOutput0"></div>
+            <div id="engineOutput1"></div>
+            <div id="settings">
+                <div style="display: flex; flex-direction: column;">
+                    <div>Player1:<select id="player0"></select></div>
+                    <div>Player2:<select id="player1"></select></div>
+                </div>
+            </div>
+        </div>
         <button onclick="resetGame()">Restart</button>
     </div>
     <script src="./build/src/index.js"></script>
